--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,14 @@
       margin: 10px 0;
       color: #00ffcc;
     }
+    img.logo {
+      width: 200px;
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
-  <img src="/static/shellcoach_logo.png" alt="ShellCoach Logo" style="width: 200px; margin-bottom: 10px;">
-  <h1>🔥 ShellCoach Technologies 🔥</h1>
+  <img src="/static/shellcoach_logo.png" alt="ShellCoach Logo" class="logo">
   <div id="toggle-container">
     <label><input type="checkbox" id="ai-toggle" checked> Enable AI Command Explanations</label>
   </div>
