--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
       <input name="username" type="text" placeholder="Username" class="w-full p-2 mb-4 border border-gray-300 rounded">
       <input name="password" type="password" placeholder="Password" class="w-full p-2 mb-4 border border-gray-300 rounded">
       <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">REGISTER</button>
-      <p class="mt-4 text-sm text-center">Already have an account? <a href="/login" class="text-blue-500">Register</a></p>
+      <p class="mt-4 text-sm text-center">Already have an account? <a href="/login" class="text-blue-500">Login</a></p>
     </form>
   </div>
 </body>
